<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EduHub</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="analytic">Analytic</string>
    <string name="imo" tools:ignore="Typos">lFIJSt1U2OJ</string>
    <string name="resources">Resources</string>
    <string name="home">Home</string>
    <string name="set_test">Set Test</string>
    <string name="set_assignment">Set Assignment</string>
    <string name="topic_thermodynamics">Topic(Thermodynamics)</string>
    <string name="area_of_concentration_law_of_themodynamics">Area Of Concentration(Law of Themodynamics)</string>
    <string name="score_per_question">Score Per question</string>
    <string name="no_of_questions">No of Questions</string>
    <string name="ilekun">sk-ckzwP46mRoMJrfWio0lDT3</string>
    <string name="your_schedules">Your Schedules</string>
    <string name="back">Back</string>
    <string name="material_info">Material Info</string>
    <string name="title">Title</string>
    <string name="pick_video">Pick Video</string>
    <string name="upload">Upload</string>
    <string name="search_resources">Search Resources</string>
    <string name="test_type">Test-Type:</string>
    <string name="ti">BlbkFJmbXQZXlzJ</string>
    <string name="chat">https://api.openai.com/v1/</string>
    <string name="you_have_not_upload_any_resources">You have not upload any resources</string>
    <string name="upload_resources">Upload Resources</string>
    <string name="optional_second_question">Optional Second Question</string>
    <string name="instructions">Instructions</string>
    <string name="question_what_is_adiabatic">Question(What is Adiabatic)</string>
    <string name="optional_question">Optional Question</string>
    <string name="duration_in_minute">Duration (in Minute)</string>
    <string name="back_button">back_button</string>
    <string name="pick_document">Pick Document</string>
    <string name="scheduled_class">Scheduled Class</string>
    <string name="assignment">Assignment</string>
    <string name="test">Test</string>
    <string name="test_breakdown">Test BreakDown</string>
    <string name="todo">TODO</string>
    <string name="your_total_score">Your Test Score</string>
    <string name="_18">18</string>
    <string name="_0_20">0 – 20</string>
    <string name="performance_average">Performance : Average</string>
    <string name="score">Score</string>
    <string name="subjects">Subjects</string>
    <string name="score_progress_chart">* Score Progress Chart *</string>
    <string name="score_performance">* Score Performance *</string>
    <string name="score_category">Score Category</string>
    <string name="attendance_id">Attendance Tracking</string>
    <string name="instruction">Instruction:\nPlease take a moment to read these instructions carefully and thoroughly.</string>
    <string name="reason_here">Reason here…</string>
    <string name="please_provide_reason_for_cancellation">Please Provide Reason for cancellation</string>
    <string name="cancel">Cancel</string>
    <string name="please_dont_exit_the_app">📂 Please don\'t exit the app while uploading files. Instead, you can simply minimize the app and your uploads will continue in the background. We\'ve made it easy for you to multitask and stay productive! 🚀</string>
    <string name="unable_to_set_assignment_check_your_internet_connection_and_try_again">Unable To set Assignment Check Your Internet Connection And Try Again</string>
    <string name="correlation_betwen_attendance_and_score">*Correlation Between Attendance And Score*</string>
    <string name="attendance">Attendance</string>
    <string name="scores">Scores</string>
    <string name="gender_distribution_performance">*Gender Distribution Performance*</string>
    <string name="student_performance">*Student Performance*</string>
    <string name="no_of_student">No Of Student</string>
    <string name="performance_metric">Performance Metric</string>
    <string name="chat_url">https://api.openai.com/v1/</string>
    <string name="oh_no_the_resource_cupboard_is_bare_but_don_t_worry_we_ll_refill_it_soon_stay_tuned_quot">Oh no, the resource cupboard is bare! 🙁 But don\'t worry, we\'ll refill it soon. 🔄 Stay tuned!\"</string>
    <string name="unable_to_load_resources_check_your_internet_connection_and_try_again">Unable to load Resources Check Your Internet Connection And try Again…</string>
    <string name="check_your_internet_connection_and_try_again">Check Your Internet COnnection And Try Again…</string>
    <string name="password">Password</string>
    <string name="matric_no_lecturerid">Matric_no / LecturerId</string>
    <string name="network_error_please_check_your_internet_connection_and_try_again">Network Error Please Check Your Internet Connection And Try Again…</string>
    <array name="courses">{""}</array>
    <string name="edu_hub_url">https://ca8e–102–91–4–174.ngrok-free.app/</string>

</resources>